--- a/home.html
+++ b/home.html
@@ -136,17 +136,17 @@
             </ul>
             <div class="show-work">
                 <div id="all">
-                    <img src="img/css1.png" alt="">
-                    <img src="img/css2.png" alt="">
-                    <img src="img/css3.png" alt="">
-                    <img src="img/css4.png" alt="">
-                    <img src="img/css5.png" alt="">
-                    <img src="img/css6.png" alt="">
-                    <img src="img/css7.png" alt="">
-                    <img src="img/java1.png" alt="">
-                    <img src="img/java2.png" alt="">
-                    <img src="img/java3.png" alt="">
-                    <img src="img/java4.png" alt="">
+                    <a href="assignment4/satay.html"><img src="img/css1.png" alt=""></a>
+                    <a href="Css/Project_coffee/Home_page.html"><img src="img/css2.png" alt=""></a>
+                    <a href="Css/google.html"><img src="img/css3.png" alt=""></a>
+                    <a href="Css/port2.html"><img src="img/css4.png" alt=""></a>
+                    <a href=""><img src="img/css5.png" alt=""></a>
+                    <a href=""><img src="img/css6.png" alt=""></a>
+                    <a href=""><img src="img/css7.png" alt=""></a>
+                    <a href=""><img src="img/java1.png" alt=""></a>
+                    <a href=""><img src="img/java2.png" alt=""></a>
+                    <a href=""><img src="img/java3.png" alt=""></a>
+                    <a href=""><img src="img/java4.png" alt=""></a>
                 </div>
 
                 <div id="css">
