--- a/Css/port2.html
+++ b/Css/port2.html
@@ -29,7 +29,7 @@
             <div class="barfoot">
                 <div class="profile">
                     <div class="picture">
-                        <img src="" alt="">
+                        <img src="img/donale.png" alt="">
                     </div>
 
                     <div class="contacts">
