--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                     <li id = "link-2"><a href="#about">About</a></li>
                     <li id = "link-3"><a href="#Assignment">Assignment</a></li>
                     <li id = "link-4"><a href="#skill">Skill</a></li>
-                    <li id = "link-5"><a href="#">Contacts</a></li>
+                    <li id = "link-5"><a href="#contact">Contacts</a></li>
                 </ul>
             </div> 
             <div class="profile">
@@ -129,47 +129,146 @@
                 <p>MY WORK</p>
                 <h1>Skill</h1>
             </div>
-            <ul>
+            <ul  data-aos="fade-down" >
                 <li><button id="btnAll">All</button></li>
                 <li><button id="btnCss">Html & Css</button></li>
                 <li><button id="btnJava">Javascipt</button></li>
             </ul>
             <div class="show-work">
                 <div id="all">
-                    <a href="assignment4/satay.html"><img src="img/css1.png" alt=""></a>
-                    <a href="Css/Project_coffee/Home_page.html"><img src="img/css2.png" alt=""></a>
-                    <a href="Css/google.html"><img src="img/css3.png" alt=""></a>
-                    <a href="Css/port2.html"><img src="img/css4.png" alt=""></a>
-                    <a href=""><img src="img/css5.png" alt=""></a>
-                    <a href=""><img src="img/css6.png" alt=""></a>
-                    <a href=""><img src="img/css7.png" alt=""></a>
-                    <a href=""><img src="img/java1.png" alt=""></a>
-                    <a href=""><img src="img/java2.png" alt=""></a>
-                    <a href=""><img src="img/java3.png" alt=""></a>
-                    <a href=""><img src="img/java4.png" alt=""></a>
+                    <div class="web-1">
+                        <a href="assignment4/satay.html" target="_blank"><img src="img/css1.png" alt=""></a>
+                        <h1>Website Chicken Satay</h1>
+                    </div>
+                    <div class="web-2">
+                        <a href="Css/Project_coffee/Home_page.html" target="_blank"><img src="img/css2.png" alt=""></a>
+                        <h1>Project Coffee page</h1>
+                    </div>
+                    <div class="web-3">
+                        <a href="Css/google.html" target="_blank"><img src="img/css3.png" alt=""></a>
+                        <h1>Web Clone Google</h1>
+                    </div>
+                    <div class="web-4">
+                        <a href="Css/port2.html" target="_blank"><img src="img/css4.png" alt=""></a>
+                        <h1>Template portfolio</h1>
+                    </div>
+                    <div class="web-5">
+                        <a href="Css/Flexweb.html" target="_blank"><img src="img/css5.png" alt=""></a>
+                        <h1>Flex & Responsive</h1>
+                    </div>
+                    <div class="web-6">
+                        <a href="Css/hover.html" target="_blank"><img src="img/css6.png" alt=""></a>
+                        <h1>Hover css</h1>
+                    </div>
+                    <div class="web-7">
+                        <a href="Css/port3.html" target="_blank"><img src="img/css7.png" alt=""></a>
+                        <h1>Shopping Template</h1>
+                    </div>
+                    <div class="web-8">
+                        <a href="Javascript/assign6/website.html" target="_blank"><img src="img/java1.png" alt=""></a>
+                        <h1>Register & login</h1>
+                    </div>
+                    <div class="web-9">
+                        <a href="Javascript/assign7/Square.html" target="_blank"><img src="img/java2.png" alt=""></a>
+                        <h1>Game squares</h1>
+                    </div>
+                    <div class="web-10">
+                        <a href="Javascript/assign5/Assi5.html" target="_blank"><img src="img/java3.png" alt=""></a>
+                        <h1>Post and comment</h1>
+                    </div>
+                    <div class="web-11">
+                        <a href="Javascript/Seachimg/Seachimg.html" target="_blank"><img src="img/java4.png" alt=""></a>
+                        <h1>Website Search Image</h1>
+                    </div>
+                 
                 </div>
 
                 <div id="css">
-                    <img src="img/css1.png" alt="">
-                    <img src="img/css2.png" alt="">
-                    <img src="img/css3.png" alt="">
-                    <img src="img/css4.png" alt="">
-                    <img src="img/css5.png" alt="">
-                    <img src="img/css6.png" alt="">
-                    <img src="img/css7.png" alt="">
+                    <div class="web-1">
+                        <a href="assignment4/satay.html" target="_blank"><img src="img/css1.png" alt=""></a>
+                        <h1>Website Chicken Satay</h1>
+                    </div>
+                    <div class="web-2">
+                        <a href="Css/Project_coffee/Home_page.html" target="_blank"><img src="img/css2.png" alt=""></a>
+                        <h1>Project Coffee page</h1>
+                    </div>
+                    <div class="web-3">
+                        <a href="Css/google.html" target="_blank"><img src="img/css3.png" alt=""></a>
+                        <h1>Web Clone Google</h1>
+                    </div>
+                    <div class="web-4">
+                        <a href="Css/port2.html" target="_blank"><img src="img/css4.png" alt=""></a>
+                        <h1>Template portfolio</h1>
+                    </div>
+                    <div class="web-5">
+                        <a href="Css/Flexweb.html" target="_blank"><img src="img/css5.png" alt=""></a>
+                        <h1>Flex & Responsive</h1>
+                    </div>
+                    <div class="web-6">
+                        <a href="Css/hover.html" target="_blank"><img src="img/css6.png" alt=""></a>
+                        <h1>Hover css</h1>
+                    </div>
+                    <div class="web-7">
+                        <a href="Css/port3.html" target="_blank"><img src="img/css7.png" alt=""></a>
+                        <h1>Shopping Template</h1>
+                    </div>
                 </div>
 
                 <div id="java">
-                    <img src="img/java1.png" alt="">
-                    <img src="img/java2.png" alt="">
-                    <img src="img/java3.png" alt="">
-                    <img src="img/java4.png" alt="">
+                    <div class="web-8">
+                        <a href="Javascript/assign6/website.html" target="_blank"><img src="img/java1.png" alt=""></a>
+                        <h1>Register & login</h1>
+                    </div>
+                    <div class="web-9">
+                        <a href="Javascript/assign7/Square.html" target="_blank"><img src="img/java2.png" alt=""></a>
+                        <h1>Game squares</h1>
+                    </div>
+                    <div class="web-10">
+                        <a href="Javascript/assign5/Assi5.html" target="_blank"><img src="img/java3.png" alt=""></a>
+                        <h1>Post and comment</h1>
+                    </div>
+                    <div class="web-11">
+                        <a href="Javascript/Seachimg/Seachimg.html" target="_blank"><img src="img/java4.png" alt=""></a>
+                        <h1>Website Search Image</h1>
+                    </div>
                 </div>
             </div>
-
-
-
         </div>
+    </div>
+
+    <div id="contact" class="contact">
+        <div class="container">
+            <div class="headline">
+                <p>Address Information</p>
+                <h1>Contact</h1>
+            </div>
+            <div class="detail">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d969.2704462463064!2d100.48211628814552!3d13.652788799397774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDM5JzEwLjAiTiAxMDDCsDI4JzU3LjYiRQ!5e0!3m2!1sen!2sth!4v1615852463829!5m2!1sen!2sth" allowfullscreen="" loading="lazy" ></iframe>
+                <div class="address">
+                    <div class="location" data-aos="fade-up" data-aos-duration="2000">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>92/44, Puttabucha 39, Thailand 10140 </p>
+                    </div>
+                    <div class="phone" data-aos="fade-up" data-aos-duration="2000">
+                        <i class="fas fa-phone-alt"></i>
+                        <p>+66 97 012 1843</p>
+                    </div>
+                    <div class="email" data-aos="fade-up" data-aos-duration="2000">
+                        <i class="fas fa-envelope"></i>
+                        <p>dafy2555@gmail.com</p>
+                    </div>
+                    <hr>
+                    <div class="icon" data-aos="fade-left" data-aos-duration="3000" >
+                        <a href="https://www.facebook.com/surasak.sorattayathon.5/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/sura_devv/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="http://line.me/ti/p/~opapayao" target="_blank"><i class="fab fa-line"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>© Copyright 2019-2021. All rights are reserved.</p>
     </div>
     
 
