--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                     <h1>About Me</h1>
                 </div>
                 <div class="profile">
-                    <img src="img/profile.png" alt="" data-aos="fade-right" data-aos-duration="1200">
+                    <img src="img/profile.png" alt="">
                     <div class="detail">
                         <h2 >I'm <b>Surasak Sorattayathon</b> </h2>
                         <blockquote >Hi! My name is <b>Surasak Sorattayathon.</b> Nickname is dave. I want to be a web developer, 
@@ -56,31 +56,31 @@
                             And in the future I would like to study back-end, my dream is to be a full stack.
                         </blockquote>
                          <div class="grid-container">
-                            <div class="item-1" data-aos="fade-right" data-aos-duration="2000">
+                            <div class="item-1" data-aos="fade-right" data-aos-duration="1000">
                                 <i class="fas fa-gift"></i>
                                 <p><strong>Birthday:</strong> 14.02.2000</p>
                             </div>
-                            <div class="item-2" data-aos="fade-right" data-aos-duration="2000">
+                            <div class="item-2" data-aos="fade-right" data-aos-duration="1500">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <p><strong>Location:</strong> 39 Puttabucha,Thailand</p>
                             </div>
-                            <div class="item-3" data-aos="fade-right" data-aos-duration="2000">
+                            <div class="item-3" data-aos="fade-right" data-aos-duration="2500">
                                 <i class="fas fa-university"></i>
                                 <p><strong>Study:</strong> KMUTT</p>
                             </div>
-                            <div class="item-4" data-aos="fade-right" data-aos-duration="2000">
+                            <div class="item-4" data-aos="fade-right" data-aos-duration="3000">
                                 <i class="fas fa-envelope"></i>
                                 <p><strong>Mail:</strong> dafy2555@gmail.com</p>
                             </div>
-                            <div class="item-5" data-aos="fade-right" data-aos-duration="3000">
+                            <div class="item-5" data-aos="fade-right" data-aos-duration="1500">
                                 <i class="fas fa-calendar-alt"></i>
                                 <p><strong>Age:</strong> 21</p>
                             </div>
-                            <div class="item-6" data-aos="fade-right" data-aos-duration="3000">
+                            <div class="item-6" data-aos="fade-right" data-aos-duration="2000">
                                 <i class="fas fa-gamepad"></i>
                                 <p><strong>Interests:</strong> Game, Music</p>
                             </div>
-                            <div class="item-7" data-aos="fade-right" data-aos-duration="3000">
+                            <div class="item-7" data-aos="fade-right" data-aos-duration="2500">
                                 <i class="fas fa-graduation-cap"></i>
                                 <p><strong>Degree:</strong> Junior</p>
                             </div>
@@ -103,22 +103,22 @@
                 </div>
                 <div class="grid-container">
                     <div class="item-1">
-                        <img src="img/Assign4.png" alt="" data-aos="fade-down-right" data-aos-duration="1000">
+                        <img src="img/Assign4.png" alt="" >
                         <h1>Assignment4</h1>
                         <a href="assignment4/satay.html" target="_blank"><button>View</button></a>
                     </div>
                     <div class="item-2">
-                        <img src="img/Assign5.png" alt="" data-aos="fade-down-right" data-aos-duration="1000">
+                        <img src="img/Assign5.png" alt="" >
                         <h1>Assignment5</h1>
                         <a href="assignment5/Assi5.html" target="_blank"><button>View</button></a>
                     </div>
                     <div class="item-3">
-                        <img src="img/Assign6.png" alt="" data-aos="fade-up-right" data-aos-duration="1000">
+                        <img src="img/Assign6.png" alt="" >
                         <h1>Assignment6</h1>
                         <a href="assignment6/website.html" target="_blank"><button>View</button></a>
                     </div>
                     <div class="item-4" >
-                        <img src="img/Assign7.png" alt="" data-aos="fade-up-right" data-aos-duration="1000">
+                        <img src="img/Assign7.png" alt="" >
                         <h1>Assignment7</h1>
                         <a href="assignment7/Square.html" target="_blank"><button>View</button></a>
                     </div>
@@ -252,20 +252,20 @@
                 <div class="detail">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d969.2704462463064!2d100.48211628814552!3d13.652788799397774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDM5JzEwLjAiTiAxMDDCsDI4JzU3LjYiRQ!5e0!3m2!1sen!2sth!4v1615852463829!5m2!1sen!2sth" allowfullscreen="" loading="lazy" ></iframe>
                     <div class="address">
-                        <div class="location" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="location">
                             <i class="fas fa-map-marker-alt"></i>
                             <p>92/44, Puttabucha 39, Thailand 10140 </p>
                         </div>
-                        <div class="phone" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="phone">
                             <i class="fas fa-phone-alt"></i>
                             <p>+66 97 012 1843</p>
                         </div>
-                        <div class="email" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="email">
                             <i class="fas fa-envelope"></i>
                             <p>dafy2555@gmail.com</p>
                         </div>
                         <hr>
-                        <div class="icon" data-aos="fade-right" data-aos-duration="3000" >
+                        <div class="icon"  >
                             <a href="https://www.facebook.com/surasak.sorattayathon.5/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                             <a href="https://www.instagram.com/sura_devv/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="http://line.me/ti/p/~opapayao" target="_blank"><i class="fab fa-line"></i></a>
