--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@
                         And in the future I would like to study back-end, my dream is to be a full stack.
                     </blockquote>
                      <div class="grid-container">
-                        <div class="item-1" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="item-1" >
                             <i class="fas fa-gift"></i>
                             <p><strong>Birthday:</strong> 14.02.2000</p>
                         </div>
-                        <div class="item-2" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="item-2" >
                             <i class="fas fa-map-marker-alt"></i>
                             <p><strong>Location:</strong> 39 Puttabucha,Thailand</p>
                         </div>
-                        <div class="item-3" data-aos="fade-right" data-aos-duration="2500">
+                        <div class="item-3" >
                             <i class="fas fa-university"></i>
                             <p><strong>Study:</strong> KMUTT</p>
                         </div>
-                        <div class="item-4" data-aos="fade-right" data-aos-duration="3000">
+                        <div class="item-4" >
                             <i class="fas fa-envelope"></i>
                             <p><strong>Mail:</strong> dafy2555@gmail.com</p>
                         </div>
-                        <div class="item-5" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="item-5" >
                             <i class="fas fa-calendar-alt"></i>
                             <p><strong>Age:</strong> 21</p>
                         </div>
-                        <div class="item-6" data-aos="fade-right" data-aos-duration="2000">
+                        <div class="item-6">
                             <i class="fas fa-gamepad"></i>
                             <p><strong>Interests:</strong> Game, Music</p>
                         </div>
-                        <div class="item-7" data-aos="fade-right" data-aos-duration="2500">
+                        <div class="item-7">
                             <i class="fas fa-graduation-cap"></i>
                             <p><strong>Degree:</strong> Junior</p>
                         </div>
-                        <div class="item-8" data-aos="fade-right" data-aos-duration="3000">
+                        <div class="item-8" >
                             <i class="fas fa-phone-alt"></i>
                             <p><strong>Phone:</strong> +66 97 012 1843</p>
                         </div>
