--- a/Css/hover.html
+++ b/Css/hover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hover css</title>
     <link rel="stylesheet" href="hover.css">
 </head>
 <body>
