--- a/assignment4/satay.html
+++ b/assignment4/satay.html
@@ -170,7 +170,9 @@
     </div>
 
     <div class="container">
-        <div class="footer"></div>
+        <div class="footer">
+            <h1>© Copyright 2021. By recipetineats</h1>
+        </div>
     </div>
 
     <div class="logo">
