--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div> 
 
     <div class="footer">
-        <p>© Copyright 2019-2021. All rights are reserved.</p>
+        <p>© Copyright 2021. By AOS - Animate on scroll library</p>
     </div> 
 
     <script src="Website.js"></script>
